<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mapa Matfyzu</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Mapa Matfyzu</string>
    <string name="button_google_map_sk">Pohyb po mape (Google)</string>
    <string name="search_teacher_sk">Vyhľadanie učiteľa</string>
    <string name="search_room_sk">Úprava dát</string>
    <string name="google_map_preview_sk">Google Mapa</string>
    <string name="map_api_key">ENTER KEY</string>
    <string name="title_activity_osmdroid_map">OSMDroidMapActivity</string>
    <string name="osm_map_preview_sk">OSMDroid Mapa</string>
    <string name="button_osm_map_sk">Pohyb po mape</string>
    <string name="title_activity_sample">Sample</string>
    <string name="hide_search_sk">Skryť</string>
    <string name="show_search_sk">Vyhľadať</string>
    <string name="button_floor_sk">Poschodie</string>
    <string name="dialog_name">Meno:</string>
    <string name="dialog_room">Miestnost:</string>
    <string name="dialog_floor">Poschodie:</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_delete">Vymazať</string>
    <string name="dialog_edit_marker">Upraviť marker</string>
    <string name="radioFloor0">0.</string>
    <string name="radioFloor1">1.</string>
    <string name="radioFloor2">2.</string>
    
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="gray">#BBBBBB</color>
    <string name="text_initializing">Initializing...</string>


</resources>