<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_teacher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="onClick"
        android:text="@string/search_room_sk" />

    <Button
        android:id="@+id/button_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:onClick="onClick"
        android:text="@string/search_teacher_sk" />

    <Button
        android:id="@+id/button_google_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button_teacher"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:onClick="onClick"
        android:text="@string/button_google_map_sk" />

    <Button
        android:id="@+id/button_osm_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_google_map"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/button_osm_map_sk" />

</RelativeLayout>
